--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,3 +36,18 @@ button {
   border-radius: 20px;
 }
 
+.explosion {
+  animation: explode 1s infinite;
+}
+
+@keyframes explode {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
